[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "littlehorse-client"
version = "0.0.0"
description = "LittleHorse is a high-performance microservice orchestration engine that allows developers to build scalable, maintainable, and observable applications"
authors = [ "LittleHorse Engineering <engineering@littlehorse.io>",]
readme = "README.md"
license = "SSPL-1.0"
homepage = "https://littlehorse.io"
repository = "https://github.com/littlehorse-enterprises/littlehorse"
documentation = "https://littlehorse.io/docs/server"
keywords = [ "littlehorse",]
[[tool.poetry.packages]]
include = "littlehorse"

[tool.black]
line-length = 88
exclude = "littlehorse/model/"

[tool.ruff]
line-length = 88
exclude = [ "littlehorse/model/",]

[tool.mypy]
exclude = [ "littlehorse/model/", "tests/",]
strict = true
ignore_missing_imports = true
disallow_untyped_calls = false
warn_return_any = false
disallow_subclassing_any = false

[tool.poetry.dependencies]
python = ">=3.9 <3.14"
# The server is using protobuf 3.23 in python you have to add +1, so 4.23
protobuf = "^4.23"
# The server is using grpcio 1.56
grpcio = "^1.56"
jproperties = "^2.1"
authlib = "^1.3"
requests = "^2.32"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
ruff = "*"
types-protobuf = "^4.23.4"
types-requests = "^2.31"
faker = "^19.3"
semver = "^3.0"
click = "^8.1"
toml = "^0.10"
rich = "^13.5"
