[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "littlehorse-client"
version = "0.0.0"
description = "LittleHorse is a high-performance microservice orchestration engine that allows developers to build scalable, maintainable, and observable applications"
authors = [{ name = "LittleHorse", email = "engineering@littlehorse.io" }]
readme = "README.md"
license = { text = "SSPL-1.0" }
keywords = ["littlehorse"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "protobuf==6.30.1",
    "grpcio==1.71.0",
    "jproperties>=2.1,<2.2",
    "authlib>=1.5,<1.6",
    "requests>=2.32,<2.33"
]

[project.urls]
homepage = "https://littlehorse.io"
repository = "https://github.com/littlehorse-enterprises/littlehorse"
documentation = "https://littlehorse.io/docs/server"
issues = "https://github.com/littlehorse-enterprises/littlehorse/issues"

[tool.poetry]
name = "littlehorse-client"
version = "0.0.0"
description = "LittleHorse is a high-performance microservice orchestration engine that allows developers to build scalable, maintainable, and observable applications"
authors = [ "LittleHorse <engineering@littlehorse.io>" ]
packages = [
    { include = "littlehorse" },
]

[tool.black]
line-length = 88
exclude = "littlehorse/model/"

[tool.ruff]
line-length = 88
exclude = ["littlehorse/model/"]

[tool.mypy]
exclude = ["littlehorse/model/", "tests/"]
strict = true
ignore_missing_imports = true
disallow_untyped_calls = false
warn_return_any = false
disallow_subclassing_any = false

[tool.poetry.group.dev.dependencies]
types-protobuf = "*"
types-requests = "*"
mypy = "*"
black = "*"
ruff = "*"
faker = "*"
