[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "littlehorse-client"
version = "0.0.0"
description = "LittleHorse is a high-performance microservice orchestration engine that allows developers to build scalable, maintainable, and observable applications"
authors = [{ name = "LittleHorse", email = "engineering@littlehorse.io" }]
readme = "README.md"
license = { text = "AGPLv3" }
keywords = ["littlehorse"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.10,<3.14"
dependencies = [
    # the server is using protobuf 23.4 (compile-proto.sh), in python it is 4.23.4
    "protobuf==4.23.4",
    # compile-proto.sh is using grpcio 1.69.0 (local-dev/Dockerfile)
    "grpcio==1.69.0",
    # other utilities
    "jproperties>=2.1,<2.2",
    "authlib>=1.6,<1.7",
    "requests>=2.32,<2.33"
]

[project.urls]
homepage = "https://littlehorse.io"
repository = "https://github.com/littlehorse-enterprises/littlehorse"
documentation = "https://littlehorse.io/docs/server"
issues = "https://github.com/littlehorse-enterprises/littlehorse/issues"

[tool.poetry]
name = "littlehorse-client"
version = "0.0.0"
description = "LittleHorse is a high-performance microservice orchestration engine that allows developers to build scalable, maintainable, and observable applications"
authors = [ "LittleHorse <engineering@littlehorse.io>" ]
packages = [
    { include = "littlehorse" },
]

[tool.black]
line-length = 88
exclude = "littlehorse/model/"

[tool.ruff]
line-length = 88
exclude = ["littlehorse/model/"]

[tool.mypy]
exclude = ["littlehorse/model/", "tests/"]
strict = true
ignore_missing_imports = true
disallow_untyped_calls = false
warn_return_any = false
disallow_subclassing_any = false

[tool.poetry.group.dev.dependencies]
# types should match with the actual version in the dependencies section
types-protobuf = "~4.23"
types-requests = "~2.32"
# next are tools for development
mypy = "*"
black = "*"
ruff = "*"
faker = "*"
parameterized = "*"
