[project]
name = "proto-comments"
version = "0.1.0"
description = ""
authors = [
    {name = "Snarr",email = "jacobsnarr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "proto-schema-parser (>=2.1.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"

